<package>
    <name>move_slow_recovery</name>
    <version>1.11.13</version>
    <description>

        This package provides a recovery behavior for the navigation stack which moves the robot slowly forward

    </description>
    <author>Alexander Reimann</author>
    <author>Reimann.Alex.88@gmail.com</author>
    <maintainer email="Reimann.Alex.88@gmail.com">Alexander Reimann</maintainer>

    <license>BSD</license>
    <url>http://wiki.ros.org/TODO</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>base_local_planner</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>eigen</run_depend>


    <export>
        <nav_core plugin="${prefix}/move_slow_plugin.xml" />
    </export>

</package>
